--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,9 +4,7 @@
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
 </head>
-<body>FirstName<input type="text" name="name"><br><br>  
-LastName <input type="text" name="password"><br><br>  
-Email    <input type="text" name="email"><br><br> 
+<body>
 <form action="index.jsp" method="post">  
 <h2> Please enter your details below </h2>
 FirstName<input type="text" name="name"><br><br>  
