--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,7 +9,7 @@
 <h2> Please enter your details below </h2>
 FirstName<input type="text" name="name"><br><br>  
 LastName <input type="text" name="password"><br><br>
-Phone Number <input type="text" name="phonenumber"><br><br>  
+#Phone Number <input type="text" name="phonenumber"><br><br>  
 Email    <input type="text" name="email"><br><br>  
 <input type="submit" value="Submit">  
 </form>  
